@@ -19,6 +19,7 @@
 - Allow nsswitch.conf to not contain "automount:" lines.
 - fix nobind man page description.
 - fix use get_proximity() without libtirpc.
+- lib/defaults.c: use WITH_LDAP conditional around LDAP types.
 
 25/07/2012 autofs-5.0.7
 =======================
